Version (SVN)
-------------------------------

XML:   Resolved issue CASTOR-1763 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved Ant task definition for XML code generator to separate deployment unit.
       Details: http://jira.codehaus.org/browse/CASTOR-1763
       (Werner - 20061228)

XML:   Resolved issue CASTOR-279 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source Generator: Multiple pattern strings ignored
       Details: http://jira.codehaus.org/browse/CASTOR-279
       (Edward - 20061228)

XML:   Resolved issue CASTOR-188 using contribution from Edward Kuns [edward.kuns@aspect.com]
       SourceGen: ClassDescriptor.getExtends() returns always null
       Details: http://jira.codehaus.org/browse/CASTOR-188
       (Edward - 20061227)

XML:   Resolved issue CASTOR-1765 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add xml/validators to checkstyle and do checkstyle cleanup
       Details: http://jira.codehaus.org/browse/CASTOR-1765
       (Edward - 20061225)

XML:   Resolved issue CASTOR-1722 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validating <xsd:IDREF> and <xsd:IDREFS> during (un)marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1722
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1764 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrectly generated qualified class name for classes in
       type hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1764
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1760 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       <xsd:int> mappes onto Java type 'int/java.lang.Integer' again.
       Details: http://jira.codehaus.org/browse/CASTOR-1760
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1761 using contribution from Edward Kuns [edward.kuns@aspect.com]