@@ -1,6 +1,11 @@
 Version (SVN)
 -------------------------------
 
+All:   Resolved issue CASTOR-112 using contribution from Le Duc Bao [leducbao@gmail.com]
+       Added generation of SQL scripts from mapping file.
+       Details: http://jira.codehaus.org/browse/CASTOR-112
+       (Ralf - 20061229)
+
 XML:   Resolved issue CASTOR-1763 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Moved Ant task definition for XML code generator to separate deployment unit.
        Details: http://jira.codehaus.org/browse/CASTOR-1763
